--- a/project/templates/main/serie.html
+++ b/project/templates/main/serie.html
@@ -1,5 +1,5 @@
 {% extends 'searchlayout.html' %}
-{% import 'macros.html' as query %}
+{% from 'macros.html' import composicion %}
 
 {% block resultbody %}
     <div class="center-block" style="width: 80%;">
@@ -12,12 +12,6 @@
             </h3> 
         </div>
         <br>
-        <div>
-            <h4>Origen</h4>
-            <h3 class="indented">
-                {{ query.lugar(serie) }}
-            </h3>FG
-        </div>
         <br>
         <div>
             {% if serie.giro is not none %}
@@ -27,6 +21,6 @@
             {% endif %}
         </div>
         <hr>
-        {{ query.pista(result) }}
+        {{ composicion(result) }}
     </div>
 {% endblock %}
