--- a/project/templates/poner/idioma.html
+++ b/project/templates/poner/idioma.html
@@ -6,7 +6,7 @@
 
 <div>
     <br>
-    <h2>Añadir una serie</h2>
+    <h2>Añadir una idioma</h2>
     <br>
     <p>Por favor, agregue información adicional sobre este trabajo.</p>
     <form id="add-entity-form" method='POST' action="">
@@ -14,13 +14,10 @@
         <br>
         <div class="center-block skinny">
             <div class="form-group">
-                {{render_field(form.delete_serie, class ="form-control")}}
+                {{render_field(form.delete_idioma, class ="form-control")}}
             </div>
             <div class="form-group">
-                {{render_field(form.nom_serie, class ="form-control")}}
-            </div>
-            <div class="form-group">
-                {{render_field(form.giro, class ="form-control")}}
+                {{render_field(form.nom_idioma, class ="form-control")}}
             </div>
             <br>
              <div>
