--- a/project/templates/poner/instrumento.html
+++ b/project/templates/poner/instrumento.html
@@ -2,11 +2,11 @@
 
 {% block body %}
 
-{% from "includes/_formhelpers.html" import render_field %}
+{% from "includes/_formhelpers.html" import render_field, render_delete_field %}
 
 <div>
     <br>
-    <h2>Añadir una serie</h2>
+    <h2>Añadir una instrumento</h2>
     <br>
     <p>Por favor, agregue información adicional sobre este trabajo.</p>
     <form id="add-entity-form" method='POST' action="">
@@ -14,13 +14,20 @@
         <br>
         <div class="center-block skinny">
             <div class="form-group">
-                {{render_field(form.delete_serie, class ="form-control")}}
+                {{render_delete_field(form.delete_inst)}}
             </div>
             <div class="form-group">
-                {{render_field(form.nom_serie, class ="form-control")}}
+                {{render_field(form.nom_inst, class ="form-control")}}
             </div>
             <div class="form-group">
-                {{render_field(form.giro, class ="form-control")}}
+                {{ form.electronico }} &nbsp;
+                {{ form.electronico.label }}
+            </div>
+            <div class="form-group">
+                {{render_field(form.familia_instr_id, class ="form-control")}}
+            </div>
+            <div class="form-group">
+              {{render_field(form.instrumento_comentario, class ="form-control")}}
             </div>
             <br>
              <div>
