--- a/project/static/css/global.css
+++ b/project/static/css/global.css
@@ -19,10 +19,16 @@ a.underline{
     text-decoration: none;
 }
 
-.skinny{
-    width: 80%;
+.skinny {
+    width: 95%;
 }
 
+@media screen and (min-width: 1440px) {
+
+    .skinny {
+        width: 80%;
+    }
+}
 
 .footer {
     margin: auto;
