--- a/project/templates/poner/instrumento.html
+++ b/project/templates/poner/instrumento.html
@@ -14,7 +14,7 @@
         <br>
         <div class="center-block skinny">
             <div class="form-group">
-                {{render_delete_field(form.delete_inst)}}
+                {{ render_delete_field(form.delete_inst, 'inst') }}
             </div>
             <div class="form-group">
                 {{render_field(form.nom_inst, class ="form-control")}}
